<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/cordinator"
    tools:context="com.bizagi.app.workportal.vacation_update.UpdateVacationRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:enabled="false"
                android:hint="@string/requestVacation_employee_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputBeginDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:enabled="false"

                android:hint="@string/request_vacation_fromDate"></EditText>

            <EditText
                android:id="@+id/inputEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:gravity="right"
                android:enabled="false"

                android:hint="@string/request_vacation_toDate"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/request_vacation_days_amount"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/inputRequestedDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="right"
                android:text="5"

                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/request_vacations_title_lastVacationOn"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/txtLastVacationOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="2/2/2016"
                android:gravity="right"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:id="@+id/btn_accept"
                android:text="@string/update_request_btn_accept"
                android:background="?attr/colorPrimary"
                android:textColor="@android:color/white"
                />

            <Button
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reject"
                android:text="@string/update_request_btn_reject"
                android:background="@android:color/darker_gray"
                android:textColor="@color/colorPrimary"
                />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
